--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
             }
             
             try {
-                const response = await fetch('http://localhost:3000/api/login', {
+                const response = await fetch('http://18.212.217.221:3000/api', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -70,4 +70,5 @@
         });
     </script>
 </body>
+
 </html>
