--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
             }
             
             try {
-                const response = await fetch('http://18.212.217.221:3000/api', {
+                const response = await fetch('http://18.212.217.221:3000/api/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -72,3 +72,4 @@
 </body>
 
 </html>
+
